[gd_scene load_steps=8 format=3 uid="uid://c0r13k6xllbd4"]

[ext_resource type="Script" path="res://src/modal/img_effect/ImgDesaturationDialog.gd" id="1_dfdpe"]
[ext_resource type="Shader" path="res://src/shaders/Desaturate.gdshader" id="2_m307x"]
[ext_resource type="Script" path="res://src/modal/img_effect/ImgPreview.gd" id="3_773t3"]
[ext_resource type="Shader" path="res://src/shaders/TransparentChecker.gdshader" id="4_msm1i"]
[ext_resource type="Script" path="res://src/widgets/TransChecker.gd" id="5_tbsue"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5s8h2"]
shader = ExtResource("2_m307x")
shader_parameter/red = null
shader_parameter/blue = null
shader_parameter/green = null
shader_parameter/alpha = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l68on"]
shader = ExtResource("4_msm1i")
shader_parameter/size = 10.0
shader_parameter/alpha = 1.0
shader_parameter/color1 = Color(0.7, 0.7, 0.7, 1)
shader_parameter/color2 = Color(1, 1, 1, 1)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/scale = Vector2(0, 0)
shader_parameter/rect_size = Vector2(200, 200)
shader_parameter/follow_movement = false
shader_parameter/follow_scale = false

[node name="ImgDesaturationDialog" type="ConfirmationDialog"]
disable_3d = true
title = "Desaturation"
size = Vector2i(270, 369)
visible = true
unresizable = true
theme_type_variation = &"ConfirmDialog"
script = ExtResource("1_dfdpe")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="column" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="note" type="Label" parent="MarginContainer/column"]
layout_mode = 2
theme_type_variation = &"caption"
text = "Dropshadow for all selected cels."
horizontal_alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer/column"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="Preview" type="TextureRect" parent="MarginContainer/column/AspectRatioContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_5s8h2")
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 5
script = ExtResource("3_773t3")

[node name="MsgEmpty" type="Label" parent="MarginContainer/column/AspectRatioContainer/Preview"]
show_behind_parent = true
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "No visible image"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="TransChecker" type="ColorRect" parent="MarginContainer/column/AspectRatioContainer/Preview"]
show_behind_parent = true
material = SubResource("ShaderMaterial_l68on")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("5_tbsue")

[node name="holder" type="HSeparator" parent="MarginContainer/column"]
layout_mode = 2

[node name="row" type="HBoxContainer" parent="MarginContainer/column"]
layout_mode = 2
alignment = 1

[node name="column" type="VBoxContainer" parent="MarginContainer/column/row"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/column/row/column"]
layout_mode = 2
text = "Red"
horizontal_alignment = 1

[node name="InvertRed" type="CheckButton" parent="MarginContainer/column/row/column"]
unique_name_in_owner = true
self_modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"IconButton"
flat = true

[node name="column2" type="VBoxContainer" parent="MarginContainer/column/row"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/column/row/column2"]
layout_mode = 2
text = "Blue"
horizontal_alignment = 1

[node name="InvertBlue" type="CheckButton" parent="MarginContainer/column/row/column2"]
unique_name_in_owner = true
self_modulate = Color(0, 0.607843, 1, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"IconButton"
flat = true

[node name="column3" type="VBoxContainer" parent="MarginContainer/column/row"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/column/row/column3"]
layout_mode = 2
text = "Green"
horizontal_alignment = 1

[node name="InvertGreen" type="CheckButton" parent="MarginContainer/column/row/column3"]
unique_name_in_owner = true
self_modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"IconButton"
flat = true

[node name="column4" type="VBoxContainer" parent="MarginContainer/column/row"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/column/row/column4"]
layout_mode = 2
text = "Alpha"
horizontal_alignment = 1

[node name="InvertAlpha" type="CheckButton" parent="MarginContainer/column/row/column4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"IconButton"
flat = true

[node name="holder2" type="HSeparator" parent="MarginContainer/column"]
layout_mode = 2
